--- a/POS/static/ngTemplates/app.POS.product.payPopup.html
+++ b/POS/static/ngTemplates/app.POS.product.payPopup.html
@@ -111,7 +111,7 @@
       Cash On Delivery
     </div>
       <div class="btn btn-success" style="font-size:40px" ng-click="savePosPopup('PAYED')" ng-if="!posSaved">
-        Save
+        Confirm And Print
       </div>
       <div class="btn btn-default" style="font-size:40px" ng-click="CancelPosPopup()" ng-if="posSaved">
         Cancel
