--- a/POS/static/ngTemplates/app.deliveryCenter.online.orders.explore.html
+++ b/POS/static/ngTemplates/app.deliveryCenter.online.orders.explore.html
@@ -1,8 +1,8 @@
 <div class="modal-header text-center">
-<h3>Order Details</h3>
+  <h3>Order Details ({{order.created | timeAgo}})</h3>
 </div>
 <div class="modal-body">
-  <div class="container-fluid">
+  <div class="container-fluid" ng-if="viewTyp=='edit'">
     <div style="padding-top:20px;">
       <div class="col-md-12">
         <div class="col-md-3" style="border-right:solid 2px #eeeeee;min-height:82vh;position:relative;">
@@ -86,41 +86,47 @@
               <!-- <div class="col-md-4" ng-if="checkConditions.thirdParty">
             <input type="checkbox" ng-model="selectAll.toWatch"> SelectAll
           </div> -->
-              <div class="col-md-4" ng-if="checkConditions.thirdParty && order.status!='failed' && order.orderQtyMap[0].courierName==null && order.orderQtyMap[0].courierAWBNo==null">
+              <div class="col-md-4" ng-if="checkConditions.thirdParty && order.status!='failed' && order.orderQtyMap[succIdx].courierName==null && order.orderQtyMap[succIdx].courierAWBNo==null">
                 <div class="form-group">
                   <button type="button" class="btn btn-primary" mwl-confirm title="Approve" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="generateManifestForAll()" confirm-button-type="default" cancel-button-type="default">Generate Manifest </button>
                   <p class="help-block">Generate Manifest for selected orders</p>
                 </div>
               </div>
-              <div class="col-md-4" ng-if="!checkConditions.thirdParty && order.status!='failed' && order.orderQtyMap[0].courierName==null && order.orderQtyMap[0].courierAWBNo==null" ">
+              <div class="col-md-4" ng-if="!checkConditions.thirdParty && order.status!='failed' && order.orderQtyMap[succIdx].courierName==null && order.orderQtyMap[succIdx].courierAWBNo==null" ">
             <div class="form-group ">
               <button type="button " class="btn btn-primary " mwl-confirm title="Approve " message="Are you sure? " confirm-text="Yes <i class='fa fa-check'>
                 </i>" cancel-text="No" on-confirm="generateManifestForAll()" confirm-button-type="default" cancel-button-type="default">Generate Manifest </button>
                 <p class="help-block">Generate Manifest for selected orders</p>
               </div>
             </div>
-            <div class="col-md-5" style="font-size:19px" ng-if="checkConditions.changeStatus && order.status!='failed'">
+            <!-- <div class="col-md-5" style="font-size:19px" ng-if="checkConditions.changeStatus && order.status!='failed'&&succIdx>=0&&order.orderQtyMap[succIdx].status!=lastStatus">
               <span class="text-muted ">Change Status To </span> &nbsp;
               <div class="btn btn-warning">
-                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('packed')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='created'">Packed</span>
-                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('shipped')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='packed'">Shipped</span>
-                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('inTransit')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='shipped'">InTransit</span>
-                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('reachedNearestHub')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='inTransit'">ReachedNearestHub</span>
-                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('outForDelivery')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='reachedNearestHub'">OutForDelivery</span>
-                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('delivered')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='outForDelivery'">Delivered</span>
-                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('returnToOrigin')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='delivered'">ReturnToOrigin</span>
-                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('returned')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='returnToOrigin'">Returned</span>
+                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('packed')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='created'">Packed</span>
+                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('shipped')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='packed'">Shipped</span>
+                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('inTransit')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='shipped'">InTransit</span>
+                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('reachedNearestHub')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='inTransit'">ReachedNearestHub</span>
+                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('outForDelivery')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='reachedNearestHub'">OutForDelivery</span>
+                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('delivered')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='outForDelivery'">Delivered</span>
+                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('returnToOrigin')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='delivered'">ReturnToOrigin</span>
+                <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('returned')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='returnToOrigin'">Returned</span>
               </div>
+              <span  ng-repeat="s in orderStatusList track by $index" ng-if="order.orderQtyMap[succIdx].status==orderStatusList[$index]">
+                <span class="btn btn-warning" mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll(orderStatusList[$index+1])" confirm-button-type="default" cancel-button-type="default">{{orderStatusList[$index+1]}}</span>
+              </span>
 
-            </div>
-            <div class="col-md-3 pull-right" ng-if="order.status!='failed' && order.orderQtyMap[0].courierName!=null && order.orderQtyMap[0].courierAWBNo!=null">
+            </div> -->
+            <div class="col-md-4 col-md-offset-4 pull-right" ng-if="order.status!='failed' && order.orderQtyMap[succIdx].courierName!=null && order.orderQtyMap[succIdx].courierAWBNo!=null">
               <span ng-if="checkConditions.thirdParty">
-            <a href="/api/ecommerce/downloadManifest/?trackingId={{order.orderQtyMap[0].courierAWBNo}}" target="_blank">
+            <a href="/api/ecommerce/downloadManifest/?trackingId={{order.orderQtyMap[succIdx].courierAWBNo}}" target="_blank">
              <button type="button" class="btn btn-default">Download Manifest <i class="fa fa-download"></i></button> </a>
              </span>
               <span ng-if="!checkConditions.thirdParty">
-             <a href="/api/ecommerce/downloadManifest/?allData={{order.pk}}&printerDeviceId={{connectData.deviceID}}" target="_blank">
+             <a href="/api/ecommerce/downloadManifest/?allData={{order.pk}}" target="_blank" ng-if="!checkConditions.posPrinting">
               <button type="button" class="btn btn-default">Download Manifest <i class="fa fa-download"></i></button> </a>
+
+              <span class="btn btn-default" ng-if="checkConditions.posPrinting" ng-click="downloadManifestPrinter()">Download Manifest <i class="fa fa-download"></i>
+              </span>
               </span>
 
             </div>
@@ -128,13 +134,13 @@
         </div>
         <div class="row" style="margin:20px 5px">
           <div class="" ng-repeat="pData in order.orderQtyMap" style="margin-bottom:10px">
-            <div class="container-fluid card" style="padding:10px; border-left:4px solid #0c9a9e;position:relative;">
+            <div class="container-fluid card" style="padding:10px; border-left:4px solid #0c9a9e;position:relative;" ng-init="idx=$index">
 
               <!-- <input type="checkbox" ng-checked="pData.selected" ng-model="pData.selected"> -->
               <div class="row">
                 <div class="col-md-12">
 
-                  <div class="col-md-5" style="font-size:19px" ng-if="checkConditions.changeStatus && checkConditions.splitOrder && order.status!='failed' && pData.status != 'cancelled' && pData.status!='returned'">
+                  <!-- <div class="col-md-5" style="font-size:19px" ng-if="checkConditions.changeStatus && checkConditions.splitOrder && order.status!='failed' && pData.status != 'cancelled' && pData.status!='returned'&&pData.status!=lastStatus">
                     <span class="text-muted ">Change Status To </span> &nbsp;
                     <div class="btn btn-warning">
                       <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus($index,'packed')" confirm-button-type="default" cancel-button-type="default" ng-if="pData.status=='created'">Packed</span>
@@ -146,8 +152,11 @@
                       <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus($index,'returnToOrigin')" confirm-button-type="default" cancel-button-type="default" ng-if="pData.status=='delivered'">ReturnToOrigin</span>
                       <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus($index,'returned')" confirm-button-type="default" cancel-button-type="default" ng-if="pData.status=='returnToOrigin'">Returned</span>
                     </div>
-                  </div>
-                  <div class="col-md-{{checkConditions.splitOrder&&checkConditions.changeStatus?7:12}}">
+                    <span  ng-repeat="s in orderStatusList track by $index" ng-if="pData.status==orderStatusList[$index]">
+                      <span class="btn btn-warning" mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus(idx,orderStatusList[$index+1])" confirm-button-type="default" cancel-button-type="default">{{orderStatusList[$index+1]}}</span>
+                    </span>
+                  </div> -->
+                  <div class="col-md-12">
 
                     <div class="fa fa-trash-o pull-right fa-2x" style="cursor:pointer;color:red" mwl-confirm title="Cancel Item" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="orderItemCancel($index)" confirm-button-type="default"
                       cancel-button-type="default" ng-if="order.status!='failed' && pData.status=='created' || pData.status=='packed'">
@@ -163,7 +172,7 @@
                     <button type="button" class="btn btn-default">Download Manifest <i class="fa fa-download"></i></button> </a> -->
 
                       <span ng-if="checkConditions.splitOrder">
-                      <a href="/api/ecommerce/downloadManifest/?qPk={{pData.pk}}&printerDeviceId={{connectData.deviceID}}" target="_blank">
+                      <a href="/api/ecommerce/downloadManifest/?qPk={{pData.pk}}" target="_blank">
                         <button type="button" class="btn btn-default">Download Manifest <i class="fa fa-download"></i></button> </a>
                       </span>
 
@@ -275,6 +284,51 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+<div class="container-fluid" ng-if="viewTyp=='view'">
+  <div class="col-md-12 text-center" style="font-size:18px">
+    <strong>Mobile : </strong>{{order.mobileNo}} &nbsp; <strong>Address : </strong>{{order.landMark}} , {{order.street}} , {{order.city}} , {{order.pincode}} , {{order.state}} , {{order.country}}
+  </div>
+  <div class="container-fluid" style="padding:0px">
+    <table class="invoiceTable" style=" width: 100%;border-collapse: collapse;font-size:20px">
+      <tr style="background-color: #eeeeee;height: 96px;">
+        <th>#</th>
+        <th style="font-size:20px">Item Description</th>
+        <th>Qty</th>
+        <th>Rate(Rs.)</th>
+        <th>Subtotal</th>
+      </tr>
+      <tr ng-repeat="pData in order.orderQtyMap">
+        <td>{{$index + 1}}</td>
+        <td>
+          <h3 ng-if="pData.prodVar==undefined"> {{pData.productName}} {{pData.product.product.howMuch | convertUnit:pData.product.product.unit}}</h3>
+          <h3 ng-if="pData.prodVar"> {{pData.productName}}
+          <span ng-if="pData.product.product.unit!='Size and Color' && pData.product.product.unit!='Size'"> {{pData.prodVar[0].unitPerpack * pData.product.product.howMuch | convertUnit: pData.product.product.unit}} </span>
+          <span ng-if="pData.product.product.unit=='Size and Color'||pData.product.product.unit=='Size'"> {{pData.prodVar[0].unitPerpack | convertSize: pData.product.product.unit}} {{pData.desc}} </span>
+        </h3>
+        </td>
+        <td>
+          <span style="font-size:20px">{{pData.qty}}</span>
+
+        </td>
+        <td>
+          <span style="font-size:20px;" ng-if="checkConditions.showGst&&pData.product.product_taxAmount>0">{{pData.productPrice}} ( <b>+</b> {{pData.product.product_taxAmount}} )</span>
+          <span style="font-size:20px;" ng-if="!checkConditions.showGst||pData.product.product_taxAmount==0"><i class="fa {{currency}}"></i> {{pData.productPrice}}</span>
+        </td>
+        <td>
+          <span style="font-size:20px;"> {{pData.totalAmount}}</span>
+        </td>
+      </tr>
+      <tr>
+        <td style="border:none;"></td>
+        <td style="border:none;"></td>
+        <td style="border:none;"></td>
+        <td style="border:none;"></td>
+        <td ng-if="form.products[0].data.pk&&!posShowAll" style="font-size:30px;background-color:black;color:white"><b>{{subTotal()}}</b></td>
+      </tr>
+    </table>
+
   </div>
 </div>
 </div>
