--- a/POS/static/ngTemplates/app.deliveryCenter.orders.html
+++ b/POS/static/ngTemplates/app.deliveryCenter.orders.html
@@ -8,7 +8,7 @@
               <span class="pull-right" style="padding-right:15px"><h4>#{{data.pk}}</h4></span>
               <span class="text-center"><h4>{{data.created | date : dd-MMM-yyyy}}</h4></span>
             </div>
-            <div class="row" style="padding-top:20px;">
+            <div class="row" style="padding-top:10px;">
               <div class="col-md-12">
                 <strong>Amount :</strong> <i class="fa {{currency}}"></i> {{data.totalAmount}} <br>
                 <strong>Shopping :</strong> {{data.modeOfShopping}} <br>
@@ -20,17 +20,35 @@
         </div>
 
       </div>
-      <div class="col-md-12 text-center" ng-if="showMore">
-        <span class="btn btn-primary" ng-click="fetchInvData()">Load More</span>
+      <div class="col-md-12 text-center" ng-show="showMore">
+        <span class="btn btn-primary" ng-click="limit=limit+6;fetchInvData()">Load More</span>
       </div>
     </div>
     <hr>
     <div class="row" ng-controller="app.deliveryCenter.orders.offline">
       <div class="col-md-12">
-        <div class="col-md-4" ng-repeat="data in invData track by $index" style="padding:5px">
-          <div class="well" style="margin-bottom: 5px;padding:5px 10px;height:17vh;border-radius:20px">
-            <div class="row" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
-              <div class="col-md-2 text-center" style="padding-top: 20px;">
+        <div class="col-md-4" ng-repeat="data in invData track by $index" style="padding:0px 5px">
+          <div class="container-fluid well" style="cursor:pointer;padding:5px 15px;border-radius:20px" ng-click="rowActionClicked($index)">
+            <!-- <div class="row" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;"> -->
+              <div class="row" style="border-bottom: 1px solid #dedede;font-size: 15px;">
+                <span class="pull-right" style="padding-right:15px"><h4>#{{data.pk}}</h4></span>
+                <span class="text-center"><h4>{{data.created | date : dd-MMM-yyyy}}</h4></span>
+              </div>
+              <div class="row" style="margin-top:10px">
+                <div class="col-md-12">
+                  <strong>Name :</strong> {{data.customer.name}} <br>
+                  <!-- <strong>Due Date :</strong> {{data.duedate | date:'dd MMM yyyy'}} <br> -->
+                  <!-- <strong>Shopping :</strong> OFFLINE <br> -->
+                  <strong>Payment Mode :</strong> {{data.modeOfPayment}} <br>
+                  <strong>Total Amount :</strong> <i class="fa {{currency}}"></i> {{data.grandTotal}} <br>
+                  <strong>Amount Received :</strong> <i class="fa {{currency}}"></i> {{data.amountRecieved}}
+                </div>
+              </div>
+
+
+
+
+              <!-- <div class="col-md-2 text-center" style="padding-top: 20px;">
                 <span style="font-size: 20px;">{{data.pk}}</span>
               </div>
               <div class="col-md-8" style="margin-top:10px;">
@@ -55,13 +73,13 @@
                   <span><i class="fa fa-pencil" style="color: rgb(24, 108, 219);font-size: 20px;cursor:pointer;" ng-click="rowActionClicked($index,'edit')"></i>
                   </span>
                 </div>
-              </div>
-            </div>
+              </div> -->
+            <!-- </div> -->
           </div>
         </div>
       </div>
-      <div class="col-md-12 text-center" ng-if="showMore">
-        <span class="btn btn-primary" ng-click="fetchInvData()">Load More</span>
+      <div class="col-md-12 text-center" ng-show="showMore">
+        <span class="btn btn-primary" ng-click="limit=limit+6;fetchInvData()">Load More</span>
       </div>
     </div>
   </div>
@@ -69,12 +87,12 @@
 
     <div class="row" ng-controller="app.deliveryCenter.orders.online">
       <div class="col-md-12" ng-repeat="data in pginvData track by $index" style="padding-bottom:20px;padding-left:10px;padding-right:10px;">
-        <div class="container-fluid card" style="padding-bottom:10px;border-radius:20px" ng-click="pgrowActionClicked($index,'info')">
+        <div class="container-fluid card" style="cursor:pointer;padding-bottom:10px;border-radius:20px" ng-click="pgrowActionClicked($index,'info')">
           <div class="row" style="border-bottom: 1px solid #dedede;">
             <span class="pull-right" style="padding-right:15px"><h4>#{{data.pk}}</h4></span>
             <span class="text-center"><h4>{{data.created | date : dd-MMM-yyyy}}</h4></span>
           </div>
-          <div class="row" style="padding-top:20px;">
+          <div class="row" style="padding-top:10px;">
             <div class="col-md-12">
               <strong>Amount :</strong> <i class="fa {{currency}}"></i> {{data.totalAmount}} <br>
               <strong>Shopping :</strong> {{data.modeOfShopping}} <br>
@@ -84,49 +102,31 @@
           </div>
         </div>
       </div>
-      <div class="col-md-12 text-center" ng-if="pgshowMore">
-        <span class="btn btn-primary" ng-click="pgfetchInvData()">Load More</span>
-      </div>
     </div>
     <hr>
     <div class="row" ng-controller="app.deliveryCenter.orders.offline">
-      <!-- <div class="col-md-12"> -->
-        <div class="col-md-12" ng-repeat="data in pginvData track by $index" style="padding:5px">
-          <div class="well" style="margin-bottom: 5px;padding:5px 10px;height:17vh;border-radius:20px">
-            <div class="row" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
-              <div class="col-md-2 text-center" style="padding-top: 20px;">
-                <span style="font-size: 20px;">{{data.pk}}</span>
-              </div>
-              <div class="col-md-8" style="margin-top:10px;">
-                <div class="row col-md-12">
-                  <span>{{data.customer.name}}</span>
-                </div>
-                <div class="row" style="font-size: 12px;">
-                  <div class="col-md-12">
-                    <span><strong>Due Date : </strong>{{data.duedate | date:'dd MMM yyyy'}}</span><br>
-                    <span><strong>Recieved : </strong>{{data.amountRecieved}}</span><br>
-                    <span><strong>Payment Mode : </strong>{{data.modeOfPayment}}</span><br>
-                    <span><strong>Total Amount : </strong>{{data.grandTotal}}</span>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2 text-center" ng-if="hover" style="padding-top:20px;">
-                <div class="row">
-                  <span><i class="fa fa-info" style="color: rgb(24, 108, 219);font-size: 20px;cursor:pointer;" ng-click="pgrowActionClicked($index,'info')"></i>
-                  </span>
-                </div>
-                <div class="row" style="margin-top:10px;">
-                  <span><i class="fa fa-pencil" style="color: rgb(24, 108, 219);font-size: 20px;cursor:pointer;" ng-click="pgrowActionClicked($index,'edit')"></i>
-                  </span>
-                </div>
+      <div class="col-md-12" ng-repeat="data in pginvData track by $index" style="padding:0px 5px">
+        <div class="container-fluid well" style="cursor:pointer;padding:5px 15px;border-radius:20px" ng-click="pgrowActionClicked($index)">
+          <!-- <div class="row" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;"> -->
+            <div class="row" style="border-bottom: 1px solid #dedede;font-size: 15px;">
+              <span class="pull-right" style="padding-right:15px"><h4>#{{data.pk}}</h4></span>
+              <span class="text-center"><h4>{{data.created | date : dd-MMM-yyyy}}</h4></span>
+            </div>
+            <div class="row" style="margin-top:10px">
+              <div class="col-md-12">
+                <strong>Name :</strong> {{data.customer.name}} <br>
+                <!-- <strong>Due Date :</strong> {{data.duedate | date:'dd MMM yyyy'}} <br> -->
+                <!-- <strong>Shopping :</strong> OFFLINE <br> -->
+                <strong>Payment Mode :</strong> {{data.modeOfPayment}} <br>
+                <strong>Total Amount :</strong> <i class="fa {{currency}}"></i> {{data.grandTotal}} <br>
+                <strong>Amount Received :</strong> <i class="fa {{currency}}"></i> {{data.amountRecieved}}
               </div>
             </div>
-          </div>
         </div>
-      <!-- </div> -->
-      <div class="col-md-12 text-center" ng-if="pgshowMore">
-        <span class="btn btn-primary" ng-click="pgfetchInvData()">Load More</span>
       </div>
+      <!-- <div class="col-md-12 text-center" ng-if="pgshowMore">
+        <span class="btn btn-primary" ng-click="pgfetchInvData()">Load More</span>
+      </div> -->
     </div>
   </div>
 </div>
