--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
@@ -81,40 +81,44 @@
           <!-- <div class="col-md-4" ng-if="checkConditions.thirdParty">
             <input type="checkbox" ng-model="selectAll.toWatch"> SelectAll
           </div> -->
-          <div class="col-md-4" ng-if="checkConditions.thirdParty && order.status!='failed' && order.orderQtyMap[0].courierName==null && order.orderQtyMap[0].courierAWBNo==null">
+          <div class="col-md-4" ng-if="checkConditions.thirdParty && order.status!='failed' && order.orderQtyMap[succIdx].courierName==null && order.orderQtyMap[succIdx].courierAWBNo==null">
             <div class="form-group">
               <button type="button" class="btn btn-primary" mwl-confirm title="Approve" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="generateManifestForAll()" confirm-button-type="default" cancel-button-type="default">Generate Manifest </button>
               <p class="help-block">Generate Manifest for selected orders</p>
             </div>
           </div>
-          <div class="col-md-4" ng-if="!checkConditions.thirdParty && order.status!='failed' && order.orderQtyMap[0].courierName==null && order.orderQtyMap[0].courierAWBNo==null"">
+          <div class="col-md-4" ng-if="!checkConditions.thirdParty && order.status!='failed' && order.orderQtyMap[succIdx].courierName==null && order.orderQtyMap[succIdx].courierAWBNo==null"">
             <div class="form-group">
               <button type="button" class="btn btn-primary" mwl-confirm title="Approve" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="generateManifestForAll()" confirm-button-type="default" cancel-button-type="default">Generate Manifest </button>
               <p class="help-block">Generate Manifest for selected orders</p>
             </div>
           </div>
-          <div class="col-md-5" style="font-size:19px" ng-if="checkConditions.changeStatus && order.status!='failed'">
+          <div class="col-md-5" style="font-size:19px" ng-if="checkConditions.changeStatus && order.status!='failed'&&succIdx>=0&&order.orderQtyMap[succIdx].status!=lastStatus">
             <span class="text-muted ">Change Status To </span> &nbsp;
-            <div class="btn btn-warning">
-              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('packed')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='created'">Packed</span>
-              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('shipped')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='packed'">Shipped</span>
-              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('inTransit')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='shipped'">InTransit</span>
-              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('reachedNearestHub')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='inTransit'">ReachedNearestHub</span>
-              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('outForDelivery')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='reachedNearestHub'">OutForDelivery</span>
-              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('delivered')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='outForDelivery'">Delivered</span>
-              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('returnToOrigin')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='delivered'">ReturnToOrigin</span>
-              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('returned')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[0].status=='returnToOrigin'">Returned</span>
-            </div>
+            <!-- <div class="btn btn-warning">
+              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('packed')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='created'">Packed</span>
+              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('shipped')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='packed'">Shipped</span>
+              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('inTransit')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='shipped'">InTransit</span>
+              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('reachedNearestHub')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='inTransit'">ReachedNearestHub</span>
+              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('outForDelivery')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='reachedNearestHub'">OutForDelivery</span>
+              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('delivered')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='outForDelivery'">Delivered</span>
+              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('returnToOrigin')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='delivered'">ReturnToOrigin</span>
+              <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll('returned')" confirm-button-type="default" cancel-button-type="default" ng-if="order.orderQtyMap[succIdx].status=='returnToOrigin'">Returned</span>
+            </div> -->
+            <span  ng-repeat="s in orderStatusList track by $index" ng-if="order.orderQtyMap[succIdx].status==orderStatusList[$index]">
+              <span class="btn btn-warning" mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatusForAll(orderStatusList[$index+1])" confirm-button-type="default" cancel-button-type="default">{{orderStatusList[$index+1]}}</span>
+            </span>
 
           </div>
-          <div class="col-md-3 pull-right" ng-if="order.status!='failed' && order.orderQtyMap[0].courierName!=null && order.orderQtyMap[0].courierAWBNo!=null">
+          <div class="col-md-3 pull-right" ng-if="order.status!='failed' && order.orderQtyMap[succIdx].courierName!=null && order.orderQtyMap[succIdx].courierAWBNo!=null">
             <row ng-if="checkConditions.thirdParty">
               <div class="row">
-                <a href="/api/ecommerce/downloadManifest/?trackingId={{order.orderQtyMap[0].courierAWBNo}}" target="_blank">
-                 <button type="button" class="btn btn-default">Download Manifest <i class="fa fa-download"></i></button> </a>
+                <a href="/api/ecommerce/downloadManifest/?trackingId={{order.orderQtyMap[succIdx].courierAWBNo}}" target="_blank">
+                 <button type="button" class="btn btn-primary">Download Manifest <i class="fa fa-download"></i></button> </a>
+                 <span class="btn btn-default" mwl-confirm title="Reset Manifest" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="resetManifest()" confirm-button-type="default" cancel-button-type="default">Reset Manifest <i class="fa fa-refresh"></i></span>
               </div>
               <div class="row" style="margin-top:15px;">
-                <a href="/api/ecommerce/downloadManifest/?trackingId={{order.orderQtyMap[0].courierAWBNo}}&packingSlip" target="_blank">
+                <a href="/api/ecommerce/downloadManifest/?trackingId={{order.orderQtyMap[succIdx].courierAWBNo}}&packingSlip" target="_blank">
                   <button type="button" class="btn btn-default">Download PackingSlip <i class="fa fa-download"></i></button> </a>
               </div>
 
@@ -122,11 +126,14 @@
              </row>
              <row ng-if="!checkConditions.thirdParty">
                <div class="row">
-                 <a href="/api/ecommerce/downloadManifest/?allData={{order.pk}}&printerDeviceId={{connectData.deviceID}}" target="_blank">
-                  <button type="button" class="btn btn-default">Download Manifest <i class="fa fa-download"></i></button> </a>
+                 <a href="/api/ecommerce/downloadManifest/?allData={{order.pk}}" target="_blank" ng-if="!checkConditions.posPrinting">
+                  <button type="button" class="btn btn-primary">Download Manifest <i class="fa fa-download"></i></button> </a>
+
+                  <span class="btn btn-default" ng-if="checkConditions.posPrinting" ng-click="downloadManifestPrinter()">Download Manifest <i class="fa fa-download"></i>
+                  </span>
                </div>
                <div class="row" style="margin-top:15px;">
-                 <a href="/api/ecommerce/downloadManifest/?allData={{order.pk}}&printerDeviceId={{connectData.deviceID}}}&packingSlip" target="_blank">
+                 <a href="/api/ecommerce/downloadManifest/?allData={{order.pk}}&packingSlip" target="_blank">
                    <button  type="button" class="btn btn-default">Download Packing Slip<i class="fa fa-download"></i></button> </a>
                </div>
 
@@ -137,15 +144,15 @@
       </div>
       <div class="row" style="margin:20px 5px">
         <div class="" ng-repeat="pData in order.orderQtyMap" style="margin-bottom:10px">
-          <div class="container-fluid card" style="padding:10px; border-left:4px solid #0c9a9e;position:relative;">
+          <div class="container-fluid card" style="padding:10px; border-left:4px solid #0c9a9e;position:relative;" ng-init="idx=$index">
 
             <!-- <input type="checkbox" ng-checked="pData.selected" ng-model="pData.selected"> -->
             <div class="row">
               <div class="col-md-12">
 
-                <div class="col-md-5" style="font-size:19px" ng-if="checkConditions.changeStatus && checkConditions.splitOrder && order.status!='failed' && pData.status != 'cancelled' && pData.status!='returned'">
+                <div class="col-md-5" style="font-size:19px" ng-if="checkConditions.changeStatus && checkConditions.splitOrder && order.status!='failed' && pData.status != 'cancelled' && pData.status!='returned'&&pData.status!=lastStatus">
                   <span class="text-muted ">Change Status To </span> &nbsp;
-                  <div class="btn btn-warning">
+                  <!-- <div class="btn btn-warning">
                     <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus($index,'packed')" confirm-button-type="default" cancel-button-type="default" ng-if="pData.status=='created'">Packed</span>
                     <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus($index,'shipped')" confirm-button-type="default" cancel-button-type="default" ng-if="pData.status=='packed'">Shipped</span>
                     <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus($index,'inTransit')" confirm-button-type="default" cancel-button-type="default" ng-if="pData.status=='shipped'">InTransit</span>
@@ -154,7 +161,10 @@
                     <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus($index,'delivered')" confirm-button-type="default" cancel-button-type="default" ng-if="pData.status=='outForDelivery'">Delivered</span>
                     <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus($index,'returnToOrigin')" confirm-button-type="default" cancel-button-type="default" ng-if="pData.status=='delivered'">ReturnToOrigin</span>
                     <span mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus($index,'returned')" confirm-button-type="default" cancel-button-type="default" ng-if="pData.status=='returnToOrigin'">Returned</span>
-                  </div>
+                  </div> -->
+                  <span  ng-repeat="s in orderStatusList track by $index" ng-if="pData.status==orderStatusList[$index]">
+                    <span class="btn btn-warning" mwl-confirm title="Change Status" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="changeStatus(idx,orderStatusList[$index+1])" confirm-button-type="default" cancel-button-type="default">{{orderStatusList[$index+1]}}</span>
+                  </span>
                 </div>
                 <div class="col-md-{{checkConditions.splitOrder&&checkConditions.changeStatus?7:12}}">
 
@@ -172,10 +182,10 @@
                     <button type="button" class="btn btn-default">Download Manifest <i class="fa fa-download"></i></button> </a> -->
 
                     <span ng-if="checkConditions.splitOrder">
-                      <a href="/api/ecommerce/downloadManifest/?qPk={{pData.pk}}&printerDeviceId={{connectData.deviceID}}" target="_blank">
+                      <a href="/api/ecommerce/downloadManifest/?qPk={{pData.pk}}" target="_blank">
                         <button type="button" class="btn btn-default">Download Manifest <i class="fa fa-download"></i></button> </a>
 
-                      <a href="/api/ecommerce/downloadManifest/?qPk={{pData.pk}}&printerDeviceId={{connectData.deviceID}}&packingSlip" target="_blank">
+                      <a href="/api/ecommerce/downloadManifest/?qPk={{pData.pk}}&packingSlip" target="_blank">
                         <button type="button" class="btn btn-default">Download PackingSlip <i class="fa fa-download"></i></button> </a>
                       </span>
 
