--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -62,7 +62,7 @@
       </div>
         </div>
           <div class="col-md-1">
-            <h2 style="margin-top:25px">{{totSum.toFixed(2)}}</h2>
+            <h2 style="margin-top:25px">{{totSum.toFixed(2)| number}}</h2>
           </div>
     </div>
   <!-- <div class="row">
@@ -110,7 +110,7 @@ style="padding:10px;">
       </div>
     </div>
     <div class="col-md-4  text-right" style="padding-right:30px;">
-      <h2 style="margin:0px"> Total : {{total.toFixed(2)}} </h2>
+      <h2 style="margin:0px"> Total : {{total.toFixed(2)| number}} </h2>
     </div>
     <div class="col-md-12">
       <div class="container-fluid" style="margin-top:15px;" ng-repeat="p in products">
@@ -132,11 +132,11 @@ style="padding:10px;">
               </div>
               <div class="col-md-2">
                 <span style="font-size:12px"><strong> Price :
-                  </strong>{{p.totalprice.toFixed(2)}} </span>
+                  </strong>{{p.totalprice.toFixed(2)| number}} </span>
               </div>
               <div class="col-md-2">
                 <span style="font-size:12px"><strong> Total :
-                  </strong>{{p.totalVal.toFixed(2)}} </span>
+                  </strong>{{p.totalVal.toFixed(2)| number}} </span>
               </div>
               <div class="col-md-2">
                 <button class="btn btn-primary" ng-if="p.totalqty>0&&!p.addedCart" style="font-size:12px" ng-click="addToCart(p.productPk,$index);$event.stopPropagation();">Add to Cart
@@ -183,10 +183,10 @@ style="padding:10px;">
                     <span>{{f.qty}}</span>
                   </td>
                   <td class="text-center">
-                    <span>{{f.rate.toFixed(2)}}</span>
+                    <span>{{f.rate.toFixed(2)| number}}</span>
                   </td>
                   <td class="text-center">
-                    <span>{{(f.rate * f.qty).toFixed(2) }}</span>
+                    <span>{{(f.rate * f.qty).toFixed(2)| number }}</span>
                   </td>
                 </tr>
               </table>
