--- a/homepage/static/ngTemplates/app.homepage.courses.html
+++ b/homepage/static/ngTemplates/app.homepage.courses.html
@@ -15,7 +15,7 @@
       <div class="col-md-2 col-xs-5 smdevice" style="border-right:1px solid #9E9E9E">
         <table>
           <tr>
-            <td style="width:25%;"><i class="fa fa-book"></i></td>
+            <td style="width:25%;"><i  class="fa fa-book"></i></td>
             <td><span style="font-size:20px;"><b>3 Books</b></span></td>
           </tr>
         </table>
@@ -75,18 +75,20 @@
       </div>
     </div>
   </div>
-  <!-- <div class="container-fluid" style="background-color:#FCC300;min-height:10vh;  position:relative;padding-bottom: 2em;" ng-if="device.smallDevice">
-
+  <div class="container-fluid" ng-if="device.smallDevice">
+    <div class="container" style="background-color:#FCC300;min-height:10vh;  position:relative;padding-bottom: 2em;">
+      <ng-owl-carousel class="owl-theme" owl-items="items" owl-properties="properties" owl-ready="ready($api)">
         <div ng-repeat="a in items">
-          <div class="col-xs-12 clickchange" ng-class="a.class1" ng-click="a.click">
-            <span><b>{{a.head}}</b></span>
+          <div class="col-xs-12 clickchange" ng-class="a.class1" ng-click="clicks($index+1)">
+            <span style="font-size:35px;"><b>{{a.head}}</b></span>
             <div ng-class="a.class2"></div>
           </div>
         </div>
+      </ng-owl-carousel>
+    </div>
+  </div>
 
-  </div> -->
-
-  <div class="container" ng-show="books">
+  <div class="container" ng-show="books" id="books">
     <div class="col-md-8 col-md-offset-2">
       <div ng-repeat="a in bookscontent">
         <div class="row " ng-class="!$last ? 'contentborder' : 'contentborderlast'" style="position:relative;">
@@ -98,40 +100,24 @@
           <div ng-show="a.view">
             <div ng-repeat="b in a.chapter | limitTo:5">
               <div class="row contentblock">
-                <div class="col-md-10 col-xs-11  firstchild " style="{{$last && !a.view1 ? 'color:#a3a3a3;':''}}">{{b.content}}</div>
-                <div class="col-md-2 col-xs-1  firstchild right_on">{{b.page}}</div>
+                <div class="col-md-10 col-xs-11" style="{{$last && !a.view1 ? 'color:#a3a3a3;':''}}">{{b.content}}</div>
+                <div class="col-md-2 col-xs-1  right_on" style="{{$last && !a.view1 ? 'color:#a3a3a3;':''}}">{{b.page}}</div>
               </div>
             </div>
-            <!-- <div class="row contentblock" >
-              <div class="col-md-10 col-xs-11">{{a.chapter.two}}</div>
-              <div class="col-md-2 col-xs-1  right_on">2</div>
-            </div>
-            <div class="row  contentblock" >
-              <div class="col-md-10 col-xs-11">{{a.chapter.three}}</div>
-              <div class="col-md-2 col-xs-1 right_on">5</div>
-            </div>
-            <div class="row contentblock "">
-              <div class="col-md-10 col-xs-11">{{a.chapter.four}}</div>
-              <div class="col-md-2 col-xs-1 right_on">7</div>
-            </div>
-            <div class="row  contentblock" >
+            <!-- <div class="row  contentblock" >
               <div class="col-md-10 col-xs-11">{{a.chapter.five}}</div>
               <div class="col-md-2 col-xs-1 right_on">10</div>
             </div> -->
             <div ng-show="a.view1">
-              <div ng-repeat="b in a.chapter | limitTo:5:5">
+              <div ng-repeat="b in a.chapter | limitTo:len:5">
                 <div class="row  contentblock">
                   <div class="col-md-10 col-xs-11">{{b.content}}</div>
                   <div class="col-md-2 col-xs-1 right_on">{{b.page}}</div>
                 </div>
-                <!-- <div class="row  contentblock">
-                  <div class="col-md-10 col-xs-11">{{a.chapter.seven}}</div>
-                  <div class="col-md-2 col-xs-1 right_on">15</div>
-                </div> -->
               </div>
             </div>
             <div class="text-center">
-              <button class="btn-style1" ng-click="loadcontent($index)">{{a.view1 == true?'Load Less':'Load More'}}</button>
+              <button class="btn-style1" ng-click="loadcontent($index,a.chapter.length)">{{a.view1 == true?'Load Less':'Load More'}}</button>
             </div>
 
           </div>
